--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=${DB_URL}
 spring.jpa.hibernate.ddl-auto=update
 queueName=${QUEUE_NAME}
-topicExchange={$TOPIC_EXCHANGE}
+topicExchange=${TOPIC_EXCHANGE}
+ms_inventory_url=${INVENTORY_URL}
